tests-integration/tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence
find int : int(1..n)
such that int > 5